--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "baseUrls": {
-    "apiBase": "https://azurelearningpublicapi.azurewebsites.net/api/",
+    "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:44315/"
   },
   "Logging": {
