--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,9 +1,8 @@
 ﻿{
   "baseUrls": {
-    "apiBase": "https://azurelearningpublicapi.azurewebsites.net/api/",
+    "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:44315/"
   },
-  "UseOnlyInMemoryDatabase": true,
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
