--- a/src/BlazorAdmin/wwwroot/appsettings.json
+++ b/src/BlazorAdmin/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
+    "apiBase": "https://publicapi7777.azurewebsites.net/api/",
     "webBase": "https://localhost:44315/"
   },
   "Logging": {
